EM-5908 fix code smells (#1835)
* EM-5908 fix code smells

* fix checkstyle