@@ -22,7 +22,6 @@ import uk.gov.hmcts.reform.em.hrs.repository.HearingRecordingSegmentAuditEntryRe
 import uk.gov.hmcts.reform.em.hrs.repository.ShareesAuditEntryRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.mockito.Mockito.any;
@@ -72,13 +71,13 @@ class AuditEntryServiceTests {
 
     @Test
     void testFindHearingRecordingAudits() {
-        HearingRecording hearingRecording = TestUtil.hearingRecordingWithNoDataBuilder();
+        HearingRecording testHearingRecording = TestUtil.hearingRecordingWithNoDataBuilder();
 
         when(hearingRecordingAuditEntryRepository
-                 .findByHearingRecordingOrderByEventDateTimeAsc(hearingRecording))
-            .thenReturn(Stream.of(new HearingRecordingAuditEntry()).collect(Collectors.toList()));
+                 .findByHearingRecordingOrderByEventDateTimeAsc(testHearingRecording))
+            .thenReturn(Stream.of(new HearingRecordingAuditEntry()).toList());
         List<HearingRecordingAuditEntry> entries =
-            auditEntryService.findHearingRecordingAudits(hearingRecording);
+            auditEntryService.findHearingRecordingAudits(testHearingRecording);
         Assertions.assertEquals(1, entries.size());
     }
 
